--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 
 # Site settings
 title: Edward Jivkov
-description:
+description: Portfolio
 owner: Edward Jivkov # or company name
 first_published: 2016 # if migrating another site, the year of your first publish
 email: your-email@domain.com
